tests/machine/x/c/substring_builtin.c
// Generated by Mochi experimental C compiler
#include <stdio.h>
#include <stdbool.h>
#include <stdlib.h>
#include <string.h>

static char* substring(const char* s, int start, int end) {
    int n = end - start;
    char* buf = (char*)malloc(n + 1);
    strncpy(buf, s + start, n);
    buf[n] = '\0';
    return buf;
}

int main() {
    printf("%d\n", substring("mochi", 1, 4));
    return 0;
}
